[package]
name = "woopaper"
version = "1.1.0"
edition = "2021"
authors = ["rdkang"]
description = "A blazing fast opinionated wallpaper program"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.3.2"
rand = "0.8.5"
opener = "0.5.0"
colored = "2"
trash = "3.0.0"
notify-rust = { version = "4.7", features = ["images"] }
clap = { version = "4", features = ["derive"] }
imagesize = "0.11.0"
confy = "0.5.1"
serde_derive = "1.0.152"
serde = "1.0.152"
skim = "0.10.3"
