[package]
name = "woopaper"
version = "1.3.0"
edition = "2021"
authors = ["rdkang"]
description = "A blazing fast opinionated wallpaper program"
repository = "https://github.com/Rdkang/woopaper"

[dependencies]
walkdir = "2.3.2"
rand = "0.8.5"
opener = "0.7.1"
colored = "2"
trash = "5.0.0"
notify-rust = { version = "4.7", features = ["images"] }
clap = { version = "4", features = ["derive"] }
imagesize = "0.13.0"
confy = "0.6.1"
serde_derive = "1.0.152"
serde = "1.0.152"
skim = "0.12.0"
flexi_logger = "0.28"
log = "0.4"
wallpaper = "3.2.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.4.2"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu"]
# Publish jobs to run in CI
pr-run-mode = "upload"
